# pms

./: .gitignore  README.md  ds.txt  package-lock.json  render.yaml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_brokerage_sync.py
backend/app/: __init__.py  demo_seed.py  main.py
backend/app/api/: router.py
backend/app/core/: auth.py  brokerages.py  config.py  enums.py  observability.py
backend/app/db/: session.py
backend/app/imports/: __init__.py  csv_adapters.py
backend/app/models/: __init__.py  entities.py
backend/app/ops/: __init__.py  database_portability.py  sqlite_backup.py
backend/app/providers/: brokerage_sync.py  market_data.py
backend/app/schemas/: api.py
backend/app/services/: bootstrap.py  brokerage_sync.py  imports.py  jobs.py  portfolio.py  runtime_settings.py  transactions.py
backend/tests/: conftest.py  test_api.py  test_imports.py  test_ops.py
design-system/: PUBLISHING.md  README.md  package-lock.json  package.json  tokens.json  tsconfig.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
ops/: Caddyfile  Dockerfile  README.md  RENDER_DEPLOY.md  docker-compose.prod.yml  litestream.yml  start-app.sh
scripts/: backup-db.sh  build-design-system.sh  build-frontend.sh  deploy-preflight.sh  dev-backend.sh  dev-e2e-backend.sh  dev-e2e-frontend.sh  dev-frontend.sh  dev-mvp.sh  migrate-to-neon.sh  pack-design-system.sh  package-design-system.sh  render-blueprint-url.sh  restore-db.sh  seed-demo.sh  (+7 more)
(+30 files in other folders)
